2010-08-01  Thomas Mills Hinkle  <tom@pebble>

	* src/lib/plugins/web_plugin/gourmetweb/templates/rec.html: Add
	AJAX magic to do multiplication ajax-style when javascript is
	available.

2010-07-30  Thomas Mills Hinkle  <tom@pebble>

	* src/lib/shopping.py: Refactor code -- move some code from
	shopgui classes to front-end neutral ShoppingList class that can
	be base class for HTML front-end.

	* src/lib/shopgui.py: Refactor code to allow web-front-end


	* src/lib/plugins/web_plugin/: Start a django-based web-front-end
	to Gourmet

2010-07-21  Thomas M. Hinkle  <tom@grenville>

	* src/lib/version.py (version): Version->0.15.6

2010-07-20  Thomas M. Hinkle  <tom@grenville>

	* src/lib/plugins/import_export/web_import_plugin/generic_web_importer_plugin.py (GenericWebImporter.mimetypes):
	Fixed bug in mimetypes, by adding expected application/xhtml+xml
	type.

	* src/lib/backends/db.py (RecData.get_criteria): Fix another
	sqlalchemy-API-change-caused bug.

2010-07-13  Thomas M. Hinkle  <tom@grenville>

	* src/lib/backends/db.py (RecData.save): Try to work around
	sqlalchemy bug that seems to through error on some (extra?)
	commits.

2010-07-10  Thomas M. Hinkle  <tom@grenville>

	* src/lib/version.py (version): Version-->0.15.5

	* src/lib/recindex.py (RecIndex.tree_keypress_cb): Handle Page-Up,
	Page-Down, Home and End properly for our multiple page interface.

2010-07-09  Thomas M. Hinkle  <tom@grenville>

	* src/lib/backends/db.py (RecipeManager.parse_ingredient): Fix
	typo/logic-error that prevented some units from being recognized.

	* src/lib/* Get rid of raise + string calls, as python 2.6
	prohibits them (patch from #2979619)

	* src/lib/recindex.py (RecIndex.make_search_dic): Look anywhere in
	text, not just at beginning. (fixes bug #3021913)

	* src/lib/reccard.py (DescriptionEditorModule.save): Remove old
	debug statements. Note to self: leaving in print statements is
	dangerous, as it can raise unicode errors and create bugs where